docs/deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-bot-docs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - docs.gooctoplus.com
      secretName: incident-bot-docs-tls
  rules:
    - host: docs.gooctoplus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: incident-bot-docs
                port:
                  number: 80
